feat(ad-tracker): 完善广告追踪SDK与推荐算法实现